# kbMouselook

./: CMakeLists.txt  README.md
src/: kbmouselook.cpp  mouselook.cpp
src/headers/: hotkey_action.cpp  hotkey_action.hpp  resource.h  sendinput_funcs.cpp  sendinput_funcs.hpp  tray_icon.hpp
src/resources/: resources.rc
